--- a/webshop/assets/css/products.css
+++ b/webshop/assets/css/products.css
@@ -6,6 +6,7 @@
     align-items: center;
     gap : 10px;
     position:fixed;
+    margin-top:18px;
 }
 .underheader a {
     text-decoration: none;
@@ -17,6 +18,7 @@
     height: 257px;
     background-color:rgb(240, 234, 234);
     margin-bottom: 20px;
+    margin-top:58px;
 }
 .slick_slider_image {
     width: 100%;
@@ -28,7 +30,9 @@
     flex-wrap: wrap;
     display: flex;
     justify-content: center;
-gap: 5px;
+    gap: 5px;
+    
+    
 }
 .jean_product {
     width: 22%;
