--- a/webshop/assets/css/style.css
+++ b/webshop/assets/css/style.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 header {
     position: fixed;
@@ -22,6 +23,7 @@ nav {
     align-items: center; 
     border-bottom: 1px solid black;
     padding: 0 20px; 
+    background-color: #fff;
 }
 
 ul {
