--- a/webshop/assets/css/login.css
+++ b/webshop/assets/css/login.css
@@ -9,8 +9,10 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    flex-direction: column;
+    min-height: 100vh;
     background: #f2f2f2;
+    overflow: hidden; 
 }
 
 .container {
@@ -20,6 +22,7 @@ body {
     background: #fff;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
+    margin-top: 200px; 
 }
 
 .panel-heading {
@@ -43,7 +46,6 @@ body {
     flex-direction: column;
     align-items: center;
 }
-
 
 .form-group input {
     width: 100%;
@@ -91,20 +93,14 @@ body {
     align-items: center;
 }
 
-
-/*  header, footer */
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
+/* Header, footer */
 header {
-    position: fixed;
+    position: fixed; 
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 1000;
 }
-
 
 .top-nav {
     width: 100%;
@@ -114,9 +110,10 @@ header {
 
 nav {
     display: flex;
-    align-items: center; 
+    align-items: center;
     border-bottom: 1px solid black;
-    padding: 0 20px; 
+    padding: 0 20px;
+    background-color: #fff;
 }
 
 ul {
@@ -127,24 +124,23 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: #fff;
-    align-items: center; 
-    flex-grow: 1; 
+    align-items: center;
+    flex-grow: 1;
 }
 
 .nav-icon {
     display: flex;
-    align-items: center; 
-    justify-content: space-evenly; 
-    font-size: 25px; 
-    color: #333; 
-    width: 200px; 
+    align-items: center;
+    justify-content: space-evenly;
+    font-size: 25px;
+    color: #333;
+    width: 200px;
 }
 
 .nav-icon a {
     text-decoration: none;
     color: #333;
 }
-
 
 li a {
     color: #333;
@@ -156,52 +152,19 @@ img {
     width: 150px;
 }
 
-
 .footer-trangchu {
-    display: flex; 
-    justify-content: space-evenly; 
-    align-items: center; 
-    padding: 20px; 
-    background-color:#001f5d; 
-    border-top: 1px solid #ccc; 
-    position: flex;
-    bottom: 0;
-    left: 0;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 20px;
+    background-color: #001f5d;
+    border-top: 1px solid #ccc;
     width: 100%;
-    margin-top:100px;
+    margin-top: auto;
 }
 
 .footer-trangchu h3 {
-    margin: 0; 
-    font-size: 16px; 
-    color: #fff; 
-}
-
-.imggioithieu{
-    width:100%;
-    padding-top:140px;
-    
-}
-
-.imggioithieu img{
-    width:100%;
-
-}
-
-.thongtinlova{
-    
-    margin:20px;
-    margin-top:100px;
-    font-size:25px;
-
-}
-.thongtinlova legend{
-    font-weight: bold;
-    font-size:30px;
-    
-}
-
-.thongtinlova_noidung{
-    margin:50px;
-    margin-top:20px;
+    margin: 0;
+    font-size: 16px;
+    color: #fff;
 }
