--- a/webshop/assets/css/style.css
+++ b/webshop/assets/css/style.css
@@ -2,8 +2,10 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
     box-sizing: border-box;
 }
+
 header {
     position: fixed;
     top: 0;
