--- a/webshop/assets/css/checkout.css
+++ b/webshop/assets/css/checkout.css
@@ -50,7 +50,7 @@ body {
     border: 1px solid #ddd; 
     border-radius: 8px; 
     background-color: #f9f9f9; 
-    width: calc(80% + 22px);
+    width: calc(80% - 10px);
     
 }
 
