--- a/webshop/assets/css/detail-product.css
+++ b/webshop/assets/css/detail-product.css
@@ -1,205 +1,232 @@
-
-.container{
-    display:flex;
-    margin:0;
-    padding:0;
-    height:800px;
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000; 
+    background-color: white; 
 }
 
-.container_detail{
-    
-    width:50%;
-    border:1px solid black;
-    margin:50px;
-    margin-top:80px;
-    
-    
-}
-.container_detail img{
-    padding-top:100px;
-    width:100%;
-    height:650x;
+.underheader {
+    position: fixed;
+    top: 90px; 
+    z-index: 999;
+    background-color: rgb(250, 247, 247);
+    padding:5px 0; 
 }
 
-.container_detail_img_bangsize{
-    margin-top:100px;
-}
-
-.container_detail_mota{
-    font-size:25px;
-    padding-bottom:10px;
-}
-
-.container_content{
-    margin-top:80px;
-    margin-left:5px;
-    font-size:30px;
-    width:50%;
-    
-
-}
-.container_content p{
-    background-color:rgb(105, 167, 10);
-    color:white;
-    font-size:15px;
-    margin-top:5px;
-    margin-right:90%;
-    margin-left:5px;
-}
-
-.container_price{
-    font-size:25px;
-    padding-top:8px;
-}
-.container_sotien{
-    color:#2F80ED;
-
-}
-.container_id{
-    font-size:15px;
-}
-
-.container_sales{
-    font-size:20px;
-    margin:20px 5px;
-    border:2px dashed red;
-    padding:30px;
-    margin-left:5px;
-    width:85%;
-    
-}
-.container_font{
-    font-size:20px;
-}
-.container_size{
-    border:1px dashed gray;
-    padding:10px;
-    width:92%;
-    font-size:25px;
-    margin-left:5px;
-}
-
-.container_size button:hover{
-    background-color: #02125c;
-    color:white;
-}
-
-.container_content button{
-    margin:10px;
-    width:50px;
-    height:50px;
-    background-color:white;
-    
-}
-
-.container_soluong{
-    color:rgb(5, 5, 79);
-    border-radius: 10%;
-    display:inline-flex;
-    width:50px;
-    height:50px;
-    padding:10px;
-    padding-left:20px;
-    font-size:25px;
-    
-}
-
-.addcart{
-    width:60%;
-    height:85px;
-    font-size:30px;
-    display:inline-flex;
-    margin-left:20px;
-    border-radius:5%;
-    color:#2F80ED;
-    background-color: white;
-    
-}
-
-.addcart:hover{
-    background-color: #02125c;
-    color:white;
-}
-
-.container_mua{
-    display:inline-flex;
-    width:93%;
-    height:70px;
-    border:1px solid auto;
-    background-color:#02125c;
-    margin:20px;
-    font-size:30px;
-    
-    
-}
-
-.container_mua:hover{
-    background-color:#2b2c6c;
-}
-
-.container_mua_content{
-    
-    color:white;
-   padding-left:40%;
-   padding-top:20px;
-}
-
-.container_detail_doitra{
-    font-size:25px;
-    padding-top:172px;
-    
-   
-}
-.container_detail_doitra_chitiet{
-    font-size:20px;
-    
-}
-
-.container_font_bangsize{
-    font-size:25px;
-    padding-top:50px;
-}
-
-.container_img_bangsize{
-    display:flex;
-    width: 760px;
-
-    height:450px;
-
-}
-
-.product_same{
-    font-size:35px;
+.container {
     display: flex;
-    padding:50px;
-    padding-top:600px;
+    margin: 0;
+    padding: 0;
+    height: 800px;
+    padding-top: 0px; 
 }
 
-.lovastore{
+.container_detail {
+    width: 50%;
+    border: 1px solid black;
+    height:680px;
+    margin: 50px;
+    margin-top: 80px;
+}
+
+.container_detail img {
+    width: 100%;
+    height: 680px;
+}
+
+.slideshow-container {
+    position: relative;
+    width: 100%;
+    height: 680px;
+    overflow: hidden;
+    max-width: 100%;
+}
+
+.slide-image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+}
+
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 24px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.container_detail_img_bangsize {
+    margin-top: 100px;
+}
+
+.container_detail_mota {
+    font-size: 25px;
+    padding-bottom: 10px;
+}
+
+.container_content {
+    margin-top: 80px;
+    margin-left: 5px;
+    font-size: 30px;
+    width: 50%;
+}
+
+.container_content p {
+    background-color: rgb(105, 167, 10);
+    color: white;
+    font-size: 15px;
+    margin-top: 5px;
+    margin-right: 87%;
+    margin-left: 5px;
+}
+
+.container_price {
+    font-size: 25px;
+    padding-top: 8px;
+}
+
+.container_sotien {
+    color: #2F80ED;
+}
+
+.container_id {
+    font-size: 15px;
+}
+
+.container_sales {
+    font-size: 20px;
+    margin: 20px 5px;
+    border: 2px dashed red;
+    padding: 30px;
+    margin-left: 5px;
+    width: 85%;
+}
+
+.container_font {
+    font-size: 20px;
+}
+
+.container_size {
+    border: 1px dashed gray;
+    padding: 10px;
+    width: 92%;
+    font-size: 25px;
+    margin-left: 5px;
+}
+
+.container_size button:hover {
+    background-color: #02125c;
+    color: white;
+}
+
+.container_content button {
+    margin: 10px;
+    width: 50px;
+    height: 50px;
+    background-color: white;
+}
+
+.container_soluong {
+    color: rgb(5, 5, 79);
+    border-radius: 10%;
+    display: inline-flex;
+    width: 50px;
+    height: 50px;
+    padding: 10px;
+    padding-left: 20px;
+    font-size: 25px;
+}
+
+.addcart {
+    width: 60%;
+    height: 85px;
+    font-size: 30px;
+    display: inline-flex;
+    margin-left: 20px;
+    border-radius: 5%;
+    color: #2F80ED;
+    background-color: white;
+    cursor: pointer;
+}
+
+.addcart:hover {
+    background-color: #02125c;
+    color: white;
+}
+
+.container_mua {
+    display: inline-flex;
+    width: 93%;
+    height: 70px;
+    border: 1px solid auto;
+    background-color: #02125c;
+    margin: 20px;
+    font-size: 30px;
+}
+
+.container_mua:hover {
+    background-color: #2b2c6c;
+}
+
+.container_mua_content {
+    color: white;
+    padding-left: 40%;
+    padding-top: 20px;
+}
+
+.container_detail_doitra {
+    font-size: 25px;
+    padding-top: 172px;
+}
+
+.container_detail_doitra_chitiet {
+    font-size: 20px;
+}
+
+.container_font_bangsize {
+    font-size: 25px;
+    padding-top: 50px;
+}
+
+.container_img_bangsize {
+    display: flex;
+    width: 95%;
+    height: 450px;
+}
+
+.product_same {
+    font-size: 35px;
+    display: flex;
+    padding: 50px;
+    padding-top: 600px;
+}
+
+.lovastore {
     text-decoration: none;
 }
-.lovastore:hover{
-    font-size:30px;
+
+.lovastore:hover {
+    font-size: 30px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
