--- a/webshop/assets/css/products.css
+++ b/webshop/assets/css/products.css
@@ -26,7 +26,7 @@
 }
 .jean_slick {
     width: 100%;
-    height: 480px;
+    height: 490px;
     flex-wrap: wrap;
     display: flex;
     justify-content: center;
@@ -44,7 +44,7 @@
 }
 
 .jean_product_image  {
-    width: 100%;
+    width: 90%;
 }
 
 .jean_product_image img {
@@ -52,10 +52,12 @@
     height:350px;
     border-radius: 10px;
     padding-top:10px;
+    padding-left:5%;
 
 }
 .jean_product_content {
-    padding: 0 10px;
+    padding-left:30px;
+
     
 }
 .jean_product_content a{
@@ -70,24 +72,44 @@
 
 
 }
+
+.muavagiohang {
+    display: flex;
+    align-items: center; 
+    margin-top:10px;
+    text-align:center;
+}
+
+.mua {
+    border: 1px solid black;
+    background-color: #2F80ED;
+    font-size: 27px;
+    font-weight: bold;
+    color: white;
+    display: inline-block;
+    padding: 10px 10px;
+    margin: 8px 10px;
+}
+
+.mua:hover {
+    background-color: #5a8fd4;
+}
+
+.giohang {
+    width: 20%;
+    margin-left: 20px;
+    margin-top: 0; 
+    cursor:pointer;
+}
+
+
+
+
 .gachchan{
     text-decoration-line:underline;
     color:#2F80ED;
 }
 
-
-
-.circle-img{
-    border:1px solid black;
-    border-radius:70%;
-    position:flex;
-    
-    
-}
-.circle-img img{
-    width:10%;
-
-}
     
 
 .thong_tin_jean{
@@ -134,6 +156,7 @@
     text-align: start;
     color:white;
 }
+
 
 
 
