--- a/webshop/assets/css/style.css
+++ b/webshop/assets/css/style.css
@@ -106,14 +106,14 @@ img {
 }
 
 .bestseller_jean{
-    padding-top:30px;
+    margin-top:20px;
     padding-left:20px;
     
 }
 .bestseller_jean h6{
 
     font-size:35px;
-    margin-bottom:30px;
+    margin-bottom:20px;
 }
 
 
