hiệu ứng ảnh sản phẩm trang ngoài và chi tiết sản phẩm

--- a/webshop/assets/css/products.css
+++ b/webshop/assets/css/products.css
@@ -78,6 +78,7 @@
     align-items: center; 
     margin-top:10px;
     text-align:center;
+    margin-left:20px;
 }
 
 .mua {
@@ -96,7 +97,7 @@
 }
 
 .giohang {
-    width: 20%;
+    width: 15%;
     margin-left: 20px;
     margin-top: 0; 
     cursor:pointer;
