--- a/webshop/assets/css/products.css
+++ b/webshop/assets/css/products.css
@@ -1,24 +1,23 @@
-.underheader{
-    height:40px;
-    width:100%;
+.underheader {
+    height: 40px;
+    width: 100%;
     background-color: #f8f8f8;
     display: flex;
     align-items: center;
-    gap : 10px;
-    position:fixed;
-    margin-top:18px;
+    gap: 10px;
+    position: fixed;
+    margin-top: 18px;
 }
 .underheader a {
     text-decoration: none;
-    color : #2F80ED;
-    
+    color: #2F80ED;
 }
-.slick_slider{
+.slick_slider {
     width: 100%;
     height: 257px;
-    background-color:rgb(240, 234, 234);
+    background-color: rgb(240, 234, 234);
     margin-bottom: 20px;
-    margin-top:58px;
+    margin-top: 58px;
 }
 .slick_slider_image {
     width: 100%;
@@ -26,12 +25,11 @@
 }
 .jean_slick {
     width: 100%;
-    height: 490px;
+    height: 450px;
     flex-wrap: wrap;
     display: flex;
     justify-content: center;
     gap: 5px;
-    
     
 }
 .jean_product {
@@ -39,129 +37,92 @@
     height: 100%;
     border: 1px solid black;
     border-radius: 10px;
-    margin:10px;
-
+    margin: 10px;
+    position: relative;
 }
-
-
-
-.jean_product_image  {
+.jean_product_image {
     width: 90%;
+    position: relative; /* Ensure positioning context for cart-eye */
 }
-
 .jean_product_image img {
     width: 100%;
-    height:350px;
+    height: 350px;
     border-radius: 10px;
-    padding-top:10px;
-    padding-left:5%;
-
+    padding-top: 10px;
+    padding-left: 5%;
 }
 .jean_product_content {
-    padding-left:30px;
-
-    
+    padding-left: 30px;
+    position: relative;
+    margin-top: 20px;
 }
-.jean_product_content a{
+
+.jean_product_content a {
     text-decoration: none;
-    font-size:20px;
-    color:black;
-
+    font-size: 20px;
+    color: black;
 }
-.jean_product_content_price{
-    margin-bottom:5px;
-   color:#2F80ED;
-
-
+.jean_product_content_price {
+    margin-bottom: 5px;
+    color: #2F80ED;
+}
+.cart-eye {
+    display: none;
+    position: absolute;
+    top: 70%; /* Position closer to the bottom of the image */
+    left: 50%; /* Center horizontally */
+    transform: translate(-50%, -50%); /* Center horizontally and adjust vertically */
+    background: rgba(222, 221, 221, 0.8); /* Optional background for better visibility */
+    border-radius: 10px;
+    padding: 10px;
+    z-index: 1; /* Ensure it is above other content */
 }
 
-.muavagiohang {
-    display: flex;
-    align-items: center; 
-    margin-top:10px;
-    text-align:center;
-    margin-left:20px;
+.cart-eye i {
+    font-size: 40px;
+    color: black;
+    margin: 0 10px;
+    cursor: pointer;
 }
 
-.mua {
+.cart-eye i:hover {
+    color: #05177b;
+}
+.gachchan {
+    text-decoration-line: underline;
+    color: #2F80ED;
+}
+.thong_tin_jean {
     border: 1px solid black;
-    background-color: #2F80ED;
-    font-size: 27px;
-    font-weight: bold;
-    color: white;
-    display: inline-block;
-    padding: 10px 10px;
-    margin: 8px 10px;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 20px;
+    font-size: 20px;
+    margin-top: 600px;
 }
-
-.mua:hover {
-    background-color: #5a8fd4;
+.thong_tin_jean > div > h4 {
+    text-align: center;
+    font-size: 30px;
 }
-
-.giohang {
-    width: 15%;
-    margin-left: 20px;
-    margin-top: 0; 
-    cursor:pointer;
+.thong_tin_jean > div > h5 {
+    text-align: center;
+    font-size: 30px;
 }
-
-
-
-
-.gachchan{
-    text-decoration-line:underline;
-    color:#2F80ED;
+.thong_tin_jean img {
+    width: 100%;
 }
-
-    
-
-.thong_tin_jean{
-    border:1px solid black;
-    border-radius:10px;
-    padding:20px;
-    margin:20px;
-    font-size:20px;
-    margin-top:600px;
-    
-   
-
-}
-
-.thong_tin_jean>div>h4{
-    text-align:center;
-    font-size:30px;
-
-}
-
-.thong_tin_jean>div>h5{
-    text-align:center;
-    font-size:30px;
-}
-
-.thong_tin_jean img{
-    width:100%
-
-}
-
-.footer_product{
-    padding: 20px; 
-    background-color:#001f5d; 
-    border-top: 1px solid #ccc; 
-    position:static;
+.footer_product {
+    padding: 20px;
+    background-color: #001f5d;
+    border-top: 1px solid #ccc;
+    position: static;
     bottom: 0;
     left: 0;
-    font-size:20px;
-    color:white;
+    font-size: 20px;
+    color: white;
     align-items: left;
-
 }
-.footer_product div{
+.footer_product div {
     text-align: start;
-    color:white;
+    color: white;
 }
-
-
-
-
-
-
