--- a/webshop/assets/css/products.css
+++ b/webshop/assets/css/products.css
@@ -1,12 +1,17 @@
 .underheader {
-    height: 40px;
+    position: fixed;
+    top: 65px; /* Điều chỉnh giá trị này khớp với chiều cao thực tế của header */
+    left: 0;
     width: 100%;
     background-color: #f8f8f8;
     display: flex;
     align-items: center;
     gap: 10px;
-    position: fixed;
-    margin-top: 18px;
+    margin: 0;
+    padding: 0;
+    height: 40px;
+    z-index: 999;
+    
 }
 .underheader a {
     text-decoration: none;
@@ -15,9 +20,8 @@
 .slick_slider {
     width: 100%;
     height: 257px;
-    background-color: rgb(240, 234, 234);
     margin-bottom: 20px;
-    margin-top: 58px;
+    padding-top:120px;
 }
 .slick_slider_image {
     width: 100%;
@@ -39,6 +43,10 @@
     border-radius: 10px;
     margin: 10px;
     position: relative;
+}
+.jean_product:hover{
+    border-color:#2F80ED;
+    border-width: 2px;
 }
 .jean_product_image {
     width: 90%;
