--- a/webshop/assets/css/tranggioithieu.css
+++ b/webshop/assets/css/tranggioithieu.css
@@ -1,24 +1,33 @@
-.lovahead{
-    padding:30px;
-    border:1px solid black;
+body{
+    background-color:rgb(222, 221, 221);
+}
+
+.thongtinlova{
+    padding-top:0;
     margin:20px;
-    margin-top:100px;
+    font-size:25px;
 
 }
+.thongtinlova legend{
+    
+    font-weight: bold;
+    font-size:35px;
+    color:rgb(7, 103, 181);
+    
+}
+
+.thongtinlova_noidung{
+    margin:50px;
+    margin-top:20px;
+}
+
+
 .chaomung{
     font-size:30px;
     padding-left:40px;
 
 }
-.lovahead h1{
-    color:rgb(10, 10, 112);
-    font-size:40px;
-}
-.lovahead_content{
-    font-size:25px;
-    margin-top:10px;
 
-}
 
 .lovaproduct{
     padding:20px;
@@ -89,5 +98,6 @@
 
 .tranggioithieu img{
     width:100%;
+    margin-top:0px;
 
 }
