--- a/webshop/assets/css/style.css
+++ b/webshop/assets/css/style.css
@@ -8,21 +8,25 @@ body {
 
 
 
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #001f5d;
+    z-index: 1000;
+    height: 65px;
+}
+
 nav img{
     width:100px;
     border-radius:50%; 
-    margin-left:80px;
-    margin-right:50px;
+    margin-left:30px;
+    margin-right:30px;
     
 }
 
 
-
-.top-nav {
-    width: 100%;
-    height: 50px;
-    background-color: #001f5d;
-}
 
 nav {
     display: flex;
@@ -30,6 +34,7 @@ nav {
     border-bottom: 1px solid black;
     padding: 0 20px; 
     background-color:#001f5d;
+    
 
 }
 
@@ -50,7 +55,7 @@ ul {
     align-items: center; 
     justify-content: space-evenly; 
     font-size: 25px; 
-    color: #333; 
+  
     width: 200px; 
 }
 
@@ -58,12 +63,18 @@ ul {
     text-decoration: none;
     color: #fcfcfc;
 }
-
+.nav-icon a:hover{
+    color:yellow;
+}
 
 li a {
     color: #ffffff;
     text-decoration: none;
-    padding: 25px;
+    padding: 20px;
+}
+
+li a:hover{
+    color:rgb(251, 251, 125);
 }
 
 img {
@@ -91,6 +102,9 @@ footer {
     margin-left:70px;
     margin-top:30px;
 }
+.diachi img:hover{
+    border :4px solid yellow;
+}
 
 .diachi{
     padding-left:50px;
@@ -110,6 +124,11 @@ footer {
     margin-left:50px;
     
 }
+
+.fanpage img:hover{
+    border :4px solid yellow;
+}
+
 
 .zalo{
     width:30%;
