--- a/webshop/assets/css/detail-product.css
+++ b/webshop/assets/css/detail-product.css
@@ -19,22 +19,23 @@ header {
     display: flex;
     margin: 0;
     padding: 0;
-    height: 800px;
+    height: 700px;
     padding-left:20px;
     
 }
 
 .container_extra{
-    width:15%;
+    width:10%;
     padding-top:80px;
    padding-left:40px;
     margin:10px;
+    margin-right:30px;
     display:block;
-    height:680px;
+    height:580px;
 }
 
 .container_extra img{
-    height:160px;
+    height:139px;
 }
 
 .img-detail {
@@ -50,19 +51,19 @@ header {
 
 .container_detail {
     width: 45%;
-    height:680px;
+    height:580px;
     margin-top: 80px;
 }
 
 .container_detail img {
     width: 100%;
-    height: 680px;
+    height: 580px;
 }
 
 .slideshow-container {
     position: relative;
     width: 100%;
-    height: 680px;
+    height: 580px;
     overflow: hidden;
     max-width: 100%;
 }
@@ -137,15 +138,16 @@ header {
 
 .container_id {
     font-size: 15px;
+    margin-top:5px;
 }
 
 .container_sales {
     font-size: 18px;
-    margin: 20px 5px;
+    margin: 5px;
     border: 2px dashed red;
     padding: 20px;
-    margin-left: 5px;
-    width: 85%;
+    margin-bottom: 10px;
+    width: 86%;
 }
 
 .container_fontsize {
@@ -202,17 +204,21 @@ header {
     color: rgb(5, 5, 79);
     border-radius: 10%;
     display: inline-flex;
-    width: 40px;
+    width: 35px;
     height: 28px;
-    padding: 10px;
+    padding: 10px 5px;
     padding-left: 20px;
-    font-size: 20px;
-    margin-top:30px;
+    font-size: 18px;
+    margin-top:20px;
+}
+
+.font-size-soluong{
+    font-size:25px;
 }
 
 .addcart {
-    width: 59%;
-    height: 55px;
+    width: 64%;
+    height: 53px;
     font-size: 25px;
     display: inline-flex;
     margin-left: 20px;
@@ -231,7 +237,7 @@ header {
 .container_mua {
     display: inline-flex;
     width: 91%;
-    height: 60px;
+    height: 55px;
     border: 1px solid auto;
     background-color: #02125c;
     margin: 18px;
@@ -247,43 +253,21 @@ header {
 .container_mua_content {
     color: white;
     padding-left: 40%;
-    padding-top: 15px;
+    padding-top: 13px;
 }
 
-.container_detail_doitra {
-    font-size: 25px;
-    padding-top: 90px;
-    padding-left:0px;
-}
-
-.container_detail_doitra_chitiet {
-    font-size: 20px;
-}
-
-.container_font_bangsize {
-    font-size: 25px;
-    padding-top: 50px;
-}
-
-.container_img_bangsize {
-    display: flex;
-    width: 95%;
-    height: 450px;
-}
 
 .under_product{
     display:flex;
-    margin:50px;
+    margin:30px 20px;
     width:90%;
     height:400px;
     font-size:20px;
-    margin-top:10px;
-    margin-left:20px;
-    margin-right:20px;
     border:1px solid black;
     padding:5%;
     padding-left:2%;
     padding-bottom:13%;
+    margin-top:70px;
 }
 .under_product_noidung h7{
     font-size:25px;
