--- a/webshop/assets/css/products.css
+++ b/webshop/assets/css/products.css
@@ -1,9 +1,9 @@
 .underheader {
-    position: fixed;
+    position: absolute;
     top: 65px; 
     left: 0;
     width: 100%;
-    background-color: #f8f8f8;
+    background-color: #9d9c9c;
     display: flex;
     align-items: center;
     gap: 10px;
@@ -31,7 +31,7 @@
     width: 100%;
     height: 257px;
     margin-bottom: 20px;
-    padding-top:120px;
+    padding-top:100px;
 }
 .slick_slider_image {
     width: 100%;
@@ -143,4 +143,8 @@
 .footer_product div {
     text-align: start;
     color: white;
+}
+
+.font-bold{
+    font-weight:bold;
 }
