--- a/webshop/assets/css/style.css
+++ b/webshop/assets/css/style.css
@@ -23,6 +23,7 @@ nav img{
     border-radius:50%; 
     margin-left:30px;
     margin-right:30px;
+    height:100px;
     
 }
 
@@ -94,7 +95,7 @@ footer {
     width: 100%;
     margin-top:100px;
     color:white;
-    font-size:25px;
+    font-size:23px;
 
 }
 .diachi img{
