--- a/webshop/assets/css/cart.css
+++ b/webshop/assets/css/cart.css
@@ -10,7 +10,7 @@ body {
 .container-cart {
     width: 70%;
     margin: auto;
-    margin-top: 150px;
+    margin-top: 50px;
 }
 
 .cart-header {
@@ -136,36 +136,55 @@ body {
 
 
 /* Header */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    box-sizing: border-box;
+}
+
+
+
 header {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-}
-
-
-.top-nav {
-    width: 100%;
-    height: 50px;
     background-color: #001f5d;
+    z-index: 1000;
+    height: 65px;
 }
+
+nav img{
+    width:100px;
+    border-radius:50%; 
+    margin-left:30px;
+    margin-right:30px;
+    height:100px;
+    
+}
+
+
 
 nav {
     display: flex;
     align-items: center; 
     border-bottom: 1px solid black;
     padding: 0 20px; 
-    background-color: #fff;
+    background-color:#001f5d;
+    
+
 }
 
 ul {
     display: flex;
-    height: 60px;
+    height: 65px;
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #fff;
+    background-color:#001f5d;
     align-items: center; 
     flex-grow: 1; 
 }
@@ -175,20 +194,25 @@ ul {
     align-items: center; 
     justify-content: space-evenly; 
     font-size: 25px; 
-    color: #333; 
-    width: 200px; 
+    width: 120px; 
 }
 
 .nav-icon a {
     text-decoration: none;
-    color: #333;
+    color: #fcfcfc;
+}
+.nav-icon a:hover{
+    color:yellow;
 }
 
-
 li a {
-    color: #333;
+    color: #ffffff;
     text-decoration: none;
-    padding: 25px;
+    padding: 20px;
+}
+
+li a:hover{
+    color:rgb(251, 251, 125);
 }
 
 img {
@@ -196,25 +220,137 @@ img {
 }
 
 
-
-.footer-trangchu {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 20px;
-    background-color: #001f5d;
-    border-top: 1px solid #ccc;
-    position: relative; /* Hoặc remove nếu không cần thiết */
+footer {
+    display: flex; 
+    height:230px;
+    padding: 20px; 
+    background-color:#001f5d; 
+    border-top: 1px solid #ccc; 
+  
     bottom: 0;
     left: 0;
     width: 100%;
-    margin-top: 100px;
+    margin-top:100px;
+    color:white;
+    font-size:23px;
+
+}
+.diachi img{
+    border-radius:50%;
+    margin-left:70px;
+    margin-top:30px;
+}
+.diachi img:hover{
+    border :4px solid yellow;
 }
 
-.footer-trangchu h3 {
-    margin: 0;
-    font-size: 16px;
-    color: #fff;
+.diachi{
+    padding-left:50px;
+    width:35%;
+    
+}
+
+.fanpage{
+    width:30%;
+    margin-left:30px;
+}
+
+.fanpage img{
+    border-radius:50%;
+    height:130px;
+    margin-top:50px;
+    margin-left:50px;
+    
+}
+
+.fanpage img:hover{
+    border :4px solid yellow;
+}
+
+
+.zalo{
+    width:30%;
+    margin-left:30px;
+    padding-right:30px;
+}
+
+.zalo img{
+    margin-top:30px;
+    margin-left:45px;
+}
+
+
+
+.imggioithieu{
+    width:100%;
+    padding-top:20px;
+    
+}
+
+.imggioithieu img{
+    width:100%;
+
+}
+
+.index{
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+
+}
+
+.bestseller_jean{
+    margin-top:0px;
+    padding-left:20px;
+    
+}
+.bestseller_jean h6{
+
+    font-size:35px;
+    margin-bottom:20px;
+}
+
+
+.bestseller_tay{
+    margin-top:10px;
+    padding-left:20px;
+}
+
+.bestseller_tay h6{
+    margin-bottom:30px;
+    font-size:35px;
+    
+}
+
+.bestseller_short{
+    margin-top:80px;
+    padding-left:20px;
+}
+
+.bestseller_short h6{
+    margin-bottom:30px;
+    font-size:35px;
+}
+
+.bestseller_jogger{
+    margin-top:80px;
+    padding-left:20px;
+}
+
+.bestseller_jogger h6{
+    margin-bottom:30px;
+    font-size:35px;
+}
+
+.bestseller_boxer{
+    margin-top:80px;
+    padding-left:20px;
+}
+
+.bestseller_boxer h6{
+    margin-bottom:30px;
+    font-size:35px;
 }
 
 
