--- a/webshop/assets/css/cart.css
+++ b/webshop/assets/css/cart.css
@@ -181,8 +181,7 @@ ul {
     align-items: center; 
     justify-content: space-evenly; 
     font-size: 25px; 
-  
-    width: 200px; 
+    width: 130px; 
 }
 
 .nav-icon a {
@@ -280,19 +279,29 @@ footer {
 
 }
 
+
 .underheader {
     position: absolute;
     top: 65px; 
     left: 0;
     width: 100%;
-    background-color: #faf7f7;
+    background-color: #9d9c9c;
     display: flex;
     align-items: center;
     gap: 10px;
     margin: 0;
     height: 40px;
-    z-index: 999;   
+    z-index: 999;
 }
+
+.underheader {
+    position: fixed;
+    top: 65px; 
+    z-index: 999;
+    background-color: rgb(250, 247, 247);
+    padding:5px 20px; 
+}
+
 
 .underheader_content{
     padding:0px 30px;
@@ -304,6 +313,9 @@ footer {
     
 }
 
+.font-bold{
+    font-weight:bold;
+}
 
 
 
