--- a/webshop/assets/css/products.css
+++ b/webshop/assets/css/products.css
@@ -53,6 +53,7 @@
     border-radius: 10px;
     margin: 10px;
     position: relative;
+    background-color:#ffffff;
 }
 .jean_product:hover{
     border-color:#2F80ED;
@@ -117,6 +118,7 @@
     margin: 20px;
     font-size: 20px;
     margin-top: 600px;
+    background-color:white;
 }
 .thong_tin_jean > div > h4 {
     text-align: center;
