--- a/webshop/assets/css/detail-product.css
+++ b/webshop/assets/css/detail-product.css
@@ -27,7 +27,7 @@ header {
 
 .container_extra{
     width:10%;
-    padding-top:80px;
+    padding-top:70px;
    padding-left:40px;
     margin:10px;
     margin-right:30px;
@@ -36,7 +36,7 @@ header {
 }
 
 .container_extra img{
-    height:141px;
+    height:144px;
 }
 
 .img-detail {
@@ -92,7 +92,7 @@ header {
 }
 
 .next {
-    right: 0;
+    right: 23px;
     border-radius: 3px 0 0 3px;
 }
 
@@ -194,9 +194,9 @@ header {
 }
 
 .container_content button {
-    margin: 10px;
-    width: 50px;
-    height: 50px;
+    margin: 15px;
+    width: 55px;
+    height: 55px;
     background-color: white;
 }
 
